[tool.poetry]
name = "visionpy"
version = "0.0.2"
description = "Vision Python client library"
authors = ["mio <liurusi.101@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vision-consensus/vision-python-sdk"
repository = "https://github.com/vision-consensus/vision-python-sdky"
keywords = ["vision", "api", "blockchain"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  'Natural Language :: English',
]

[tool.poetry.dependencies]
python = ">3.7.1,<4.0"
ecdsa = ">=0.15"
base58 = "^2.0.0"
pycryptodome = "^3.9.7"
eth_abi = "^2.1.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
flake8 = "^4"
black = "^22"
isort = "^5"
mypy = "^0.931"
sphinx = "^4"
pytest-asyncio = "^0.16"

[tool.black]
line-length = 100
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry >= 0.12, <1"]
build-backend = "poetry.masonry.api"

#[[tool.poetry.source]]
#name = "tencent"
#url = "https://mirrors.cloud.tencent.com/pypi/simple"
#default = true

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
